fixed artsy objects

--- a/reports/HTMLreports/report.html
+++ b/reports/HTMLreports/report.html
@@ -121,58 +121,40 @@ $(document).ready(function() {
     <h1>Nightwatch Results</h1>
     <div id="container"><a class="toggleSuccess" href="#">Show/Hide Successes</a>
       <div class="package success">
-        <h2 class="name">&#10003; evisions\navigation\argosPageLoads</h2>
+        <h2 class="name">&#10003; artsyJewels\functions\collections</h2>
         <div class="suites">
           <div class="suite success">
-            <h3 class="name">Landing page loads</h3>
+            <h3 class="name">Navigate to landing page</h3>
             <ul class="testcases">
               <li class="testcase success">
                 <div class="status">&#10003;</div>
-                <div class="name">Element &lt;body&gt; was visible after 260 milliseconds.</div>
-              </li>
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Expected element &lt;{&quot;selector&quot;:&quot;#et-boc h1&quot;}&gt; text to equal: &quot;Higher Education Software Solutions&quot; - condition was met in 232ms</div>
+                <div class="name">Element &lt;body&gt; was visible after 973 milliseconds.</div>
               </li>
             </ul>
           </div>
           <div class="suite success">
-            <h3 class="name">Argos page loads</h3>
+            <h3 class="name">Click buy now button</h3>
             <ul class="testcases">
               <li class="testcase success">
                 <div class="status">&#10003;</div>
-                <div class="name">Element &lt;[title=&quot;Argos: Enterprise Reporting&quot;]:nth-child(1)&gt; was visible after 93 milliseconds.</div>
-              </li>
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;#menu-item-3551&gt; was visible after 2312 milliseconds.</div>
-              </li>
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Testing if the page title equals &quot;Enterprise Reporting for Higher Education | Evisions&quot;  - 17 ms.</div>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="package success">
-        <h2 class="name">&#10003; evisions\navigation\landingPageLoads</h2>
-        <div class="suites">
-          <div class="suite success">
-            <h3 class="name">Go to landing page</h3>
-            <ul class="testcases">
-              <li class="testcase success">
-                <div class="status">&#10003;</div>
-                <div class="name">Element &lt;body&gt; was visible after 270 milliseconds.</div>
+                <div class="name">Element &lt;.hero__cta&gt; was visible after 717 milliseconds.</div>
               </li>
             </ul>
           </div>
           <div class="suite success">
-            <h3 class="name">Landing page loads</h3>
+            <h3 class="name">Collections page loads</h3>
             <ul class="testcases">
               <li class="testcase success">
                 <div class="status">&#10003;</div>
-                <div class="name">Expected element &lt;{&quot;selector&quot;:&quot;#et-boc h1&quot;}&gt; text to equal: &quot;Higher Education Software Solutions&quot; - condition was met in 258ms</div>
+                <div class="name">Element &lt;body&gt; was visible after 687 milliseconds.</div>
+              </li>
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Element &lt;#CollectionSection&gt; was visible after 623 milliseconds.</div>
+              </li>
+              <li class="testcase success">
+                <div class="status">&#10003;</div>
+                <div class="name">Testing if element &lt;#CollectionSection&gt; is visible  - 75 ms.</div>
               </li>
             </ul>
           </div>
